# toolcare

./: .gitignore  docker-compose.yml
backend/: Dockerfile  manage.py  pyproject.toml
backend/media/ferramentas/Alicate Digital/: download.jfif
backend/toolcare_api/: asgi.py  models.py  pagination.py  permissions.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
backend/toolcare_api/management/commands/: populate_db.py
backend/toolcare_api/migrations/: 0001_initial.py  0002_alter_funcionario_foto.py  0002_deposito_ativo_filial_ativo_manutencao.py  0002_rename_is_active_usuario_ativo_and_more.py  0003_alter_funcionario_foto.py  0003_emprestimo_nome_manutencao_nome.py  0003_manutencao_observacoes.py  0004_deposito_unique_nome_por_filial.py  0004_ferramenta_alter_funcionario_foto_emprestimo.py  0005_alter_ferramenta_data_aquisicao.py  0005_rename_ativo_funcionario_estado_and_more.py  0006_alter_cargo_nome_cargo_alter_setor_nome_setor.py  0006_auto_20260108_1002.py  0007_rename_estado_cargo_ativo_and_more.py  0008_emprestimo_nome_ferramenta_historico_and_more.py  0009_emprestimo_matricula_funcionario_historico_and_more.py
frontend/toolcare_ui/: Dockerfile  package.json
frontend/toolcare_ui/public/: index.html
frontend/toolcare_ui/src/: ApiContext.js  App.js  index.css  index.js  routes.jsx  withApi.js
frontend/toolcare_ui/src/Layout/: Layout.jsx  Layout.module.css
frontend/toolcare_ui/src/LayoutInativos/: LayoutInativos.jsx
frontend/toolcare_ui/src/context/: AuthContext.js
frontend/toolcare_ui/src/services/: api.js
(+113 files in other folders)
